# esporifai

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: bootstrap-refresh-token.yml  force-auth.yml  force-publish.yml  publish.yml  test.yml
2026-roadmap/: 00-moonshot.md  01-testing-quality-infrastructure.md  02-modern-auth-security.md  03-async-architecture-performance.md  04-data-export-integration-hub.md  05-realtime-listening-analytics.md  06-multi-platform-music-sdk.md  07-ai-music-intelligence-engine.md  08-smart-playlist-operations.md  09-historical-analytics-dashboard.md  10-developer-ecosystem-plugins.md  README.md
esporifai/: api.py  cli.py  config.py  constants.py  history.py  utils.py
tests/: test_esporifai.py
